-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: hotspot
-
b32
-
sparc
-
solaris_11
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8014594 | 8 | John Cuthbertson | P3 | Resolved | Fixed | b90 |
| JDK-8018371 | 7u45 | John Cuthbertson | P3 | Closed | Fixed | b01 |
| JDK-8016423 | 7u40 | John Cuthbertson | P3 | Resolved | Fixed | b29 |
| JDK-8015757 | hs24 | John Cuthbertson | P3 | Resolved | Fixed | b48 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (concurrentG1Refine.cpp:114), pid=1385, tid=2
# guarantee(_max_cards < max_card_num) failed: card_num representation
#
# JRE version: 7.0_04-b20
# Java VM: Java HotSpot(TM) 64-Bit Server VM (23.0-b21 mixed mode solaris-sparc )
# Core dump written. Default location: /root/kganesan/4thJune_after_finalcut/trunk/target/core or core.1385
#
# An error report file with more information is saved as:
# /root/kganesan/4thJune_after_finalcut/trunk/target/hs_err_pid1385.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
Commandline used:
LD_PRELOAD=libumem.so ../../solaris-sparcv9/bin/java -Xbootclasspath/p:cryper.jar:jceseq.jar:jceseqman.jar:sesman.jar -d64 -Xmx1560g -Xms1560g -Xmn1360g -XX:+UseG1GC -XX:+AlwaysPreTouch -XX:+UseCondCardMark -XX:+UseLargePages -XX:+UseNUMA -XX:+AggressiveOpts -XX:-UseBiasedLocking
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (concurrentG1Refine.cpp:114), pid=1385, tid=2
# guarantee(_max_cards < max_card_num) failed: card_num representation
#
# JRE version: 7.0_04-b20
# Java VM: Java HotSpot(TM) 64-Bit Server VM (23.0-b21 mixed mode solaris-sparc )
# Core dump written. Default location: /root/kganesan/4thJune_after_finalcut/trunk/target/core or core.1385
#
# An error report file with more information is saved as:
# /root/kganesan/4thJune_after_finalcut/trunk/target/hs_err_pid1385.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
Commandline used:
LD_PRELOAD=libumem.so ../../solaris-sparcv9/bin/java -Xbootclasspath/p:cryper.jar:jceseq.jar:jceseqman.jar:sesman.jar -d64 -Xmx1560g -Xms1560g -Xmn1360g -XX:+UseG1GC -XX:+AlwaysPreTouch -XX:+UseCondCardMark -XX:+UseLargePages -XX:+UseNUMA -XX:+AggressiveOpts -XX:-UseBiasedLocking
- backported by
-
JDK-8014594 G1: JVM crashes on T5-8 system with 1.5 TB heap
-
- Resolved
-
-
JDK-8015757 G1: JVM crashes on T5-8 system with 1.5 TB heap
-
- Resolved
-
-
JDK-8016423 G1: JVM crashes on T5-8 system with 1.5 TB heap
-
- Resolved
-
-
JDK-8018371 G1: JVM crashes on T5-8 system with 1.5 TB heap
-
- Closed
-